[gd_scene load_steps=7 format=2]

[ext_resource path="res://Stations/Lever.gd" type="Script" id=1]
[ext_resource path="res://Sanity.png" type="Texture" id=2]
[ext_resource path="res://HealthBar.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 299.779, 34.7368 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 160, 10 )

[node name="Lever" type="Node2D"]
script = ExtResource( 1 )

[node name="Track" type="Sprite" parent="."]
position = Vector2( 480, 205.279 )
rotation = -1.5708
scale = Vector2( 0.646811, 1 )
texture = ExtResource( 2 )

[node name="Track2" type="Sprite" parent="."]
modulate = Color( 0.568627, 0.596078, 0.678431, 1 )
position = Vector2( 481.67, 206.824 )
rotation = -1.5708
scale = Vector2( 0.57316, 0.331927 )
texture = ExtResource( 2 )

[node name="Handle" type="RigidBody2D" parent="."]
position = Vector2( 480, 50 )
scale = Vector2( 0.533727, 0.863636 )
input_pickable = true
gravity_scale = -1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Handle"]
shape = SubResource( 1 )

[node name="HealthBar" type="Sprite" parent="Handle"]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 480, 390 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="TopNode" type="StaticBody2D" parent="."]
position = Vector2( 480, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopNode"]
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 480, 390 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 3 )
[connection signal="mouse_entered" from="Handle" to="." method="_on_Handle_mouse_entered"]
[connection signal="mouse_exited" from="Handle" to="." method="_on_Handle_mouse_exited"]
